--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,21 @@
   <head>
     <title>FEC Proxy Demo</title>
     
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-    <div id="Info"></div>
-    <div id="CountDown"></div>
-    <div id="Related"></div>
+    <div id="ProductInfo"></div>
+    <div id="CheckoutPanel"></div>
+    <div id="RelatedProducts"></div>
     <div id="Reviews"></div>
-    <script src="/lib/react.development.js"></script>
+    <!-- <script src="/lib/react.development.js"></script>
     <script src="/lib/react-dom.development.js"></script>
     <script src="http://localhost:3001/app.js"></script>
     <script src="http://localhost:3002/app.js"></script>
     <script src="http://localhost:3003/app.js"></script>
-    <script src="http://localhost:3004/app.js"></script>
+    <script src="http://localhost:3004/app.js"></script> -->
     <!-- see: https://reactjs.org/docs/react-without-jsx.html -->
-    <script>
+    <!-- <script>
       ReactDOM.render(
         React.createElement(Info),
         document.getElementById('Info')
@@ -33,5 +33,6 @@
         React.createElement(Reviews),
         document.getElementById('Reviews')
       );
+      </script> -->
   </body>
 </html>
