Set up static containers for components.

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-    <div id="ProductInfo"></div>
-    <div id="CheckoutPanel"></div>
-    <div id="RelatedProducts"></div>
-    <div id="Reviews"></div>
+    <div id="ProductInfo"> This is the product Info</div>
+    <div id="CheckoutPanel"> This is the checkout panel</div>
+    <div id="RelatedProducts"> This is the related products</div>
+    <div id="Reviews"> This is the Reviews</div>
     <!-- <script src="/lib/react.development.js"></script>
     <script src="/lib/react-dom.development.js"></script>
     <script src="http://localhost:3001/app.js"></script>
