Added lib folder to utilize ReactDom

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,11 @@
     <div id="CheckoutPanel"> This is the checkout panel</div>
     <div id="RelatedProducts"> This is the related products</div>
     <div id="Reviews"> This is the Reviews</div>
-    <!-- <script src="/lib/react.development.js"></script>
+    <script src="/lib/react.development.js"></script>
     <script src="/lib/react-dom.development.js"></script>
-    <script src="http://localhost:3001/app.js"></script>
-    <script src="http://localhost:3002/app.js"></script>
-    <script src="http://localhost:3003/app.js"></script>
-    <script src="http://localhost:3004/app.js"></script> -->
+
+    <script src="http://localhost:7777/Checkout.js"></script>
+  
     <!-- see: https://reactjs.org/docs/react-without-jsx.html -->
     <!-- <script>
       ReactDOM.render(
