--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
   <head>
     <title>FEC Proxy Demo</title>
-    
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-    <div id="ProductInfo"> This is the product Info</div>
-    <div id="CheckoutPanel"> This is the checkout panel</div>
-    <div id="RelatedProducts"> This is the related products</div>
-    <div id="Reviews"> This is the Reviews</div>
+    <!-- <div id="Info"> This is the product Info</div> -->
+    <div id="Checkout"> This is the checkout panel</div>
+    <!-- <div id="RelatedProducts"> This is the related products</div>
+    <div id="Reviews"> This is the Reviews</div> -->
     <script src="/lib/react.development.js"></script>
     <script src="/lib/react-dom.development.js"></script>
 
-    <script src="http://localhost:7777/Checkout.js"></script>
-  
-    <!-- see: https://reactjs.org/docs/react-without-jsx.html -->
+    <script src="http://localhost:7777/bundle.js"></script>
+      
+    <script>
+      ReactDOM.render(
+        React.createElement(Checkout), document.getElementById('Checkout')
+      );
+    </script>
     <!-- <script>
       ReactDOM.render(
         React.createElement(Info),
