--- a/public/index.html
+++ b/public/index.html
@@ -5,37 +5,42 @@
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-    <!-- <div id="Info"> This is the product Info</div> -->
-    <div id="Checkout"> This is the checkout panel</div>
-    <!-- <div id="RelatedProducts"> This is the related products</div>
-    <div id="Reviews"> This is the Reviews</div> -->
+    <!-- Components -->
+    <div id="NavBar"><img src="https://s3-us-west-1.amazonaws.com/mattminwoolee-checkout/images/navbar.png"></div>
+    <div id="TopDisplay">
+      <div id="ProductInfo"> This is the product Info</div>
+      <div id="Checkout"> This is the checkout panel</div>
+    </div>
+    <div id="RelatedProducts"> This is the related products</div>
+    <div id="Reviews"> This is the Reviews</div>
+
+    <!-- Scripts -->
     <script src="/lib/react.development.js"></script>
     <script src="/lib/react-dom.development.js"></script>
 
-    <script src="http://localhost:7777/bundle.js"></script>
-      
+    <!-- Bundle.js -->
+    <!-- <script src="http://localhost:7777/bundle.js"></script> -->
+    <script src="https://s3-us-west-1.amazonaws.com/parmezon/bundle.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/mattminwoolee-checkout/bundle/bundle.js"></script>
+    <script src="https://s3.amazonaws.com/fec-proxy/bundle.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/avh-fec-component/bundle.js"></script>
+    
     <script>
+      console.log(ProductInfo);
+      console.log(Checkout);
+      console.log(relatedItems);
+      // ReactDOM.render(
+      //   React.createElement(ProductInfo), document.getElementById('ProductInfo')
+      // );
       ReactDOM.render(
         React.createElement(Checkout), document.getElementById('Checkout')
       );
+      ReactDOM.render(
+        React.createElement(relatedItems), document.getElementById('RelatedProducts')
+      );
+      ReactDOM.render(
+        React.createElement(Reviews), document.getElementById('Reviews')
+      );
     </script>
-    <!-- <script>
-      ReactDOM.render(
-        React.createElement(Info),
-        document.getElementById('Info')
-      );
-      ReactDOM.render(
-        React.createElement(CountDown),
-        document.getElementById('CountDown')
-      );
-      ReactDOM.render(
-        React.createElement(Related),
-        document.getElementById('Related')
-      );
-      ReactDOM.render(
-        React.createElement(Reviews),
-        document.getElementById('Reviews')
-      );
-      </script> -->
   </body>
 </html>
