--- a/public/index.html
+++ b/public/index.html
@@ -20,24 +20,24 @@
 
     <!-- Bundle.js -->
     <!-- <script src="http://localhost:7777/bundle.js"></script> -->
-    <script src="https://s3-us-west-1.amazonaws.com/parmezon/bundle.js"></script>
+    <!-- <script src="https://s3-us-west-1.amazonaws.com/parmezon/bundle.js"></script> -->
     <script src="https://s3-us-west-1.amazonaws.com/mattminwoolee-checkout/bundle/bundle.js"></script>
-    <script src="https://s3.amazonaws.com/fec-proxy/bundle.js"></script>
+    <!-- <script src="https://s3.amazonaws.com/fec-proxy/bundle.js"></script> -->
     <script src="https://s3-us-west-1.amazonaws.com/avh-fec-component/bundle.js"></script>
     
     <script>
-      console.log(ProductInfo);
-      console.log(Checkout);
-      console.log(relatedItems);
+      // console.log(ProductInfo);
+      // console.log(Checkout);
+      // console.log(relatedItems);
       // ReactDOM.render(
       //   React.createElement(ProductInfo), document.getElementById('ProductInfo')
       // );
       ReactDOM.render(
         React.createElement(Checkout), document.getElementById('Checkout')
       );
-      ReactDOM.render(
-        React.createElement(relatedItems), document.getElementById('RelatedProducts')
-      );
+      // ReactDOM.render(
+      //   React.createElement(relatedItems), document.getElementById('RelatedProducts')
+      // );
       ReactDOM.render(
         React.createElement(Reviews), document.getElementById('Reviews')
       );
