--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,12 @@
   </head>
   <body>
     <!-- Components -->
-    <div id="NavBar"><img src="https://s3-us-west-1.amazonaws.com/mattminwoolee-checkout/images/navbar.png"></div>
+    <div id="NavBar"><img src="https://s3-us-west-1.amazonaws.com/mattminwoolee-checkout/images/navbar2.png"></div>
     <div id="TopDisplay">
       <div id="ProductInfo"> This is the product Info</div>
       <div id="Checkout"> This is the checkout panel</div>
     </div>
+    <div id="FrequentlyBought"><img src="https://s3-us-west-1.amazonaws.com/mattminwoolee-checkout/images/frequentlyBought.png"/></div>
     <div id="RelatedProducts"> This is the related products</div>
     <div id="Reviews"> This is the Reviews</div>
 
