--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <div id="FrequentlyBought"><img src="https://s3-us-west-1.amazonaws.com/mattminwoolee-checkout/images/frequentlyBought.png"/></div>
     <div id="RelatedProducts"> This is the related products</div>
     <div id="Reviews"> This is the Reviews</div>
-
+    <div id="Footer"><img src="https://s3-us-west-1.amazonaws.com/mattminwoolee-checkout/images/footer.png"></div>
     <!-- Scripts -->
     <script src="/lib/react.development.js"></script>
     <script src="/lib/react-dom.development.js"></script>
