--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
     <script src="/lib/react-dom.development.js"></script>
 
     <!-- Bundle.js -->
-    <script src="https://s3-us-west-1.amazonaws.com/parmezon/bundle.js"></script>
-    <script src="https://s3-us-west-1.amazonaws.com/mattminwoolee-checkout/bundle/bundle.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/eggplantParmesan/productInfo/bundle.js"></script>
+    <!-- <script src="https://s3-us-west-1.amazonaws.com/mattminwoolee-checkout/bundle/bundle.js"></script>
     <script src="https://s3.amazonaws.com/fec-proxy/bundle.js"></script>
-    <script src="https://s3-us-west-1.amazonaws.com/avh-fec-component/bundle.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/avh-fec-component/bundle.js"></script> -->
     
     <script>
       ReactDOM.render(
